...
                Row(
                  spacing: 8,
                  children: [
                    Icon(Icons.check_circle, color: Colors.green[900]),
                    const SizedBox(width: 8),
                    Text(
                      'Correto',
                      style: Theme.of(context).textTheme.titleLarge?.copyWith(
                        color: Colors.green[900],
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ],
                ),
                CustomElevatedButton(
                  key: const Key('ok_button'),
                  backgroundColor: Colors.white,
                  foregroundColor: Colors.green,
                  shadowColor: Colors.green[700],
                  onPressed: () {
                    Routefly.pop(context);
                    if (viewModel.isQuizFinished) {
...
              children: [
                Row(
                  spacing: 8,
                  children: [
                    const Icon(Icons.error, color: Colors.white),
                    Text(
                      'Incorreto',
                      style: Theme.of(context).textTheme.titleLarge?.copyWith(
                        color: Colors.white,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ],
...
                        setState(() {
                          canPop = true;
                          canClose = true;
                        });
                        Routefly.pop(context, result: true);
                      },
                      child: const Text('Sair'),
                    ),
                  ),
                  Expanded(
                    child: ElevatedButton(
                      onPressed: () {
                        Routefly.pop(context, result: false);
...
                ? null
                : AppBar(
                  automaticallyImplyLeading: false,
                  title: Row(
                    children: [
                      IconButton(
                        key: const Key('x_button'),
                        onPressed: _handleCloseQuiz,
                        icon: const Icon(Icons.close_outlined),
                      ),
                      Expanded(
                        child: Padding(
                          padding: const EdgeInsets.all(16.0),
...
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Text(viewModel.errorMessage!),
                    TextButton(
                      onPressed: () => viewModel.loadQuiz(moduleId),
                      child: const Text('Tentar Novamente'),
                    ),
                  ],
                ),
              );
            }

...
