...
                      viewModel.saveQuestionsCommand.isRunning
                          ? const SizedBox(
                            height: 20,
                            width: 20,
                            child: CircularProgressIndicator(strokeWidth: 2),
                          )
                          : const Text('Salvar Todas as Questões'),
                ),
              ],
            ),
          );
        },
      ),
...
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        const SizedBox(height: 16),
                        // Campo Enunciado
                        TextFormField(
                          key: const Key('question_statement_field'),
                          controller: _statementController,
                          decoration: InputDecoration(
                            labelText: 'Enunciado da Questão',
                            border: const OutlineInputBorder(),
                            alignLabelWithHint: true,
                            errorText:
...
                                        );
                                      }
                                    },
                                  ),
                                  // Campo de Texto da Alternativa
                                  Expanded(
                                    key: const Key('alternative_fields'),
                                    child: TextFormField(
                                      controller:
                                          _alternativeControllers[altIndex],
                                      decoration: InputDecoration(
                                        labelText:
                                            'Alternativa ${altIndex + 1}',
...
